Bug 242295 - [GLIB] Fix memory leak in KeyedEncoderGlib finishEncoding()
Summary: [GLIB] Fix memory leak in KeyedEncoderGlib finishEncoding()
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WPE WebKit (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-03 05:04 PDT by James Hilliard
Modified: 2022-07-03 05:35 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description James Hilliard 2022-07-03 05:04:42 PDT
We need to use adoptGRef when calling g_variant_get_data_as_bytes as the return is already ref'd.
Comment 1 James Hilliard 2022-07-03 05:07:04 PDT
Pull request: https://github.com/WebKit/WebKit/pull/2039
Comment 2 EWS 2022-07-03 05:35:12 PDT
Committed 252100@main (025cae4a4ff5): <https://commits.webkit.org/252100@main>

Reviewed commits have been landed. Closing PR #2039 and removing active labels.